# mips-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: circuits.hpp  main.cpp
